@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.android.keepass"
-      android:installLocation="auto" android:versionCode="54" android:versionName="1.6.3">
+      android:installLocation="auto" android:versionName="1.7" android:versionCode="55">
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="8"/>
 	<supports-screens
       android:smallScreens="true"
