@@ -1,0 +1,5 @@
+Original author:
+Brian Pellin
+
+Johan Berts - search patches
+Tobias Selig - icon support
