@@ -55,6 +55,7 @@ import com.keepassdroid.database.PwEntry;
 import com.keepassdroid.database.PwEntryV3;
 import com.keepassdroid.database.PwEntryV4;
 import com.keepassdroid.intents.Intents;
+import com.keepassdroid.utils.Icons;
 import com.keepassdroid.utils.Types;
 import com.keepassdroid.utils.Util;
 
@@ -212,12 +213,8 @@ public class EntryActivity extends LockCloseActivity {
 	}
 	
 	private void fillData() {
-		int currIconResId = R.drawable.ic00 + mEntry.imageId;
-		if (currIconResId < R.drawable.ic99_blank)
-		{
-			ImageView iv = (ImageView) findViewById(R.id.entry_icon);
-			iv.setImageResource(currIconResId);
-		}
+		ImageView iv = (ImageView) findViewById(R.id.entry_icon);
+		iv.setImageResource(Icons.iconToResId(mEntry.imageId));
 
 		populateText(R.id.entry_title, mEntry.getTitle());
 		populateText(R.id.entry_user_name, mEntry.getUsername());
