@@ -50,6 +50,7 @@ import com.keepassdroid.database.edit.AddEntry;
 import com.keepassdroid.database.edit.OnFinish;
 import com.keepassdroid.database.edit.RunnableOnFinish;
 import com.keepassdroid.database.edit.UpdateEntry;
+import com.keepassdroid.utils.Icons;
 import com.keepassdroid.utils.Types;
 import com.keepassdroid.utils.Util;
 
@@ -228,7 +229,7 @@ public class EntryEditActivity extends LockCloseActivity {
 			case Activity.RESULT_OK:
 				mSelectedIconID = data.getExtras().getInt(IconPickerActivity.KEY_ICON_ID);
 				ImageButton currIconButton = (ImageButton) findViewById(R.id.icon_button);
-				currIconButton.setImageResource(R.drawable.ic00 + mSelectedIconID);
+				currIconButton.setImageResource(Icons.iconToResId(mSelectedIconID));
 				break;
 
 			case Activity.RESULT_CANCELED:
@@ -292,13 +293,8 @@ public class EntryEditActivity extends LockCloseActivity {
 	}
 
 	private void fillData() {
-		int currIconResId = R.drawable.ic00 + mEntry.imageId;
-		mSelectedIconID = mEntry.imageId;
-		if (currIconResId < R.drawable.ic99_blank)
-		{
-			ImageButton currIconButton = (ImageButton) findViewById(R.id.icon_button);
-			currIconButton.setImageResource(currIconResId);
-		}
+		ImageButton currIconButton = (ImageButton) findViewById(R.id.icon_button);
+		currIconButton.setImageResource(Icons.iconToResId(mEntry.imageId));
 
 		populateText(R.id.entry_title, mEntry.title);
 		populateText(R.id.entry_user_name, mEntry.getUsername());
