@@ -1,3 +1,6 @@
+KeePassDroid (1.7)
+  * Add icon support from Tobias Selig
+  
 KeePassDroid (1.6.3)
   * Search tweaks from Johan Berts
   
